--- a/assignments/Assignment+2.ipynb
+++ b/assignments/Assignment+2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "nbgrader": {
@@ -35,7 +35,18 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'United States'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -57,8 +68,27 @@
     "df['ID'] = names_ids.str[1].str[:3] # the [1] element is the abbreviation or ID (take first 3 characters from that)\n",
     "\n",
     "df = df.drop('Totals')\n",
-    "df.head()"
+    "#df.head()\n",
+    "\n",
+    "def answer_one(df):\n",
+    "    # This function returns the row for Afghanistan, which is a Series object. The assignment\n",
+    "    # question description will tell you the general format the autograder is expecting\n",
+    "  \n",
+    "    return df['Gold'].idxmax(1)\n",
+    "\n",
+    "# You can examine what your function returns by calling it in the cell. If you have questions\n",
+    "# about the assignment formats, check out the discussion forums for any FAQs\n",
+    "answer_one(df) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -73,23 +103,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "# Summer           13\n",
+       "Gold                0\n",
+       "Silver              0\n",
+       "Bronze              2\n",
+       "Total               2\n",
+       "# Winter            0\n",
+       "Gold.1              0\n",
+       "Silver.1            0\n",
+       "Bronze.1            0\n",
+       "Total.1             0\n",
+       "# Games            13\n",
+       "Gold.2              0\n",
+       "Silver.2            0\n",
+       "Bronze.2            2\n",
+       "Combined total      2\n",
+       "ID                AFG\n",
+       "Name: Afghanistan, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# You should write your whole answer within the function provided. The autograder will call\n",
     "# this function and compare the return value against the correct solution value\n",
-    "def answer_zero():\n",
+    "def answer_zero(df):\n",
     "    # This function returns the row for Afghanistan, which is a Series object. The assignment\n",
     "    # question description will tell you the general format the autograder is expecting\n",
     "    return df.iloc[0]\n",
     "\n",
     "# You can examine what your function returns by calling it in the cell. If you have questions\n",
     "# about the assignment formats, check out the discussion forums for any FAQs\n",
-    "answer_zero() "
+    "answer_zero(df) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -103,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "nbgrader": {
@@ -115,8 +181,17 @@
    "outputs": [],
    "source": [
     "def answer_one():\n",
-    "    return \"YOUR ANSWER HERE\""
+    "    return df['Gold'].idxmax(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
